--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <input type="submit" value="Evaluate">
         </form>
       </p>
+      <div id="results"></div>
     </div>
   </body>
 </html>
