Use void(0), not void()

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="content">
       <h2>Evaluate</h2>
       <p>
-        <form action="javascript:void();" id="form">
+        <form action="javascript:void(0);" id="form">
           (<input id="x" size="1"> | <input id="y" size="1">)
           <input type="submit" value="Evaluate">
         </form>
