Moved display JS to separate file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="ext/style.css" rel="stylesheet" type="text/css">
     <script src="ext/jquery.js" type="application/javascript"></script>
     <script src="ext/legendre.js" type="application/javascript"></script>
+    <script src="ext/display-legendre.js" type="application/javascript"></script>
   </head>
   <body>
     <h1>Legendre symbol evaluator</h1>
