Added jQuery UI

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Legendre symbol evaluator</title>
     <link href="ext/style.css" rel="stylesheet" type="text/css">
     <script src="ext/jquery.js" type="application/javascript"></script>
+    <script src="ext/jquery-ui.js" type="application/javascript"></script>
     <script src="ext/legendre.js" type="application/javascript"></script>
     <script src="ext/display-legendre.js" type="application/javascript"></script>
   </head>
