Retitled properties, changed CSS to fit

--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
       </p>
 
       <dl>
-        <dt id="congruent-numbers">(a)</dt>
+        <dt id="congruent-numbers">Congruent numbers</dt>
         <dd>
           If <i>a</i> &equiv; <i>b</i> (mod <i>p</i>) then (<i>a</i> | <i>p</i>)
           = (<i>b</i> | <i>p</i>)
         </dd>
 
-        <dt id="square-numbers">(b)</dt>
+        <dt id="square-numbers">Square numbers</dt>
         <dd>
           (<i>a</i><sup>2</sup> | <i>p</i>) = 1
         </dd>
 
-        <dt id="composite-numbers">(c)</dt>
+        <dt id="composite-numbers">Composite numbers</dt>
         <dd>
           (<i>ab</i> | <i>p</i>) = (<i>a</i> | <i>p</i>) (<i>b</i> | <i>p</i>)
         </dd>
 
-        <dt id="quadratic-character--1">(d)</dt>
+        <dt id="quadratic-character--1">Quadratic character of -1</dt>
         <dd>
           (-1 | <i>p</i>) = (-1)<sup>(<i>p</i> - 1) / 2</sup>
         </dd>
 
-        <dt id="quadratic-character-2">(e)</dt>
+        <dt id="quadratic-character-2">Quadratic character of 2</dt>
         <dd>
           (2 | <i>p</i>) = (-1)<sup>(<i>p</i><sup>2</sup> - 1) / 8</sup>
         </dd>
