--- a/index.html
+++ b/index.html
@@ -41,9 +41,16 @@
           (-1 | <i>p</i>) = (-1)<sup>(<i>p</i> - 1) / 2</sup>
         </dd>
 
-        <dt id="quadratic-character-2">Quadratic character of 2</dt>
+        <dt id="law-quadratic-reciprocity-1">Law of quadratic reciprocity (1)</dt>
         <dd>
-          (2 | <i>p</i>) = (-1)<sup>(<i>p</i><sup>2</sup> - 1) / 8</sup>
+          If <i>p</i> &#x2262; 1 (mod 4) or <i>q</i> &#x2262; 1 (mod 4)
+		  then (<i>p</i> | <i>q</i>) = (<i>q</i> | <i>p</i>)
+        </dd>
+
+        <dt id="law-quadratic-reciprocity-2">Law of quadratic reciprocity (2)</dt>
+        <dd>
+          If <i>p</i> &#x2262; <i>q</i> &#x2262; 3 (mod 4)
+		  then (<i>p</i> | <i>q</i>) = -(<i>q</i> | <i>p</i>)
         </dd>
       </dl>
     </div>
