--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <body>
     <h1>Legendre symbol evaluator</h1>
     <div id="instructions">
-      <h2>Properties of the Legendre symbol</h2>
+      <h2>Properties of the
+        <a href="http://mathworld.wolfram.com/LegendreSymbol.html">
+          Legendre symbol
+        </a>
+      </h2>
       <p>
         <span id="p-odd-prime"><i>p</i> is an odd prime</span>,
         <span id="a-not-congruent-p"><i>a</i> &#x2262; 0 (mod <i>p</i>)</span>
