Added QC of 2 back in!

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
           (-1 | <i>p</i>) = (-1)<sup>(<i>p</i> - 1) / 2</sup>
         </dd>
 
+        <dt id="quadratic-character-2">Quadratic character of 2</dt>
+        <dd>
+          (2 | <i>p</i>) = (-1)<sup>(<i>p</i><sup>2</sup> - 1) / 8</sup>
+        </dd>
+
         <dt id="law-quadratic-reciprocity-1">Law of quadratic reciprocity (1)</dt>
         <dd>
           If <i>p</i> &#x2262; 1 (mod 4) or <i>q</i> &#x2262; 1 (mod 4)
