--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Legendre symbol evaluator</title>
     <link href="ext/style.css" rel="stylesheet" type="text/css">
-    <script src="ext/jquery.js" type="application/javascript"></script>
-    <script src="ext/jquery-ui.js" type="application/javascript"></script>
-    <script src="ext/legendre.js" type="application/javascript"></script>
-    <script src="ext/display-legendre.js" type="application/javascript"></script>
+    <script src="ext/jquery.js" type="text/javascript"></script>
+    <script src="ext/jquery-ui.js" type="text/javascript"></script>
+    <script src="ext/legendre.js" type="text/javascript"></script>
+    <script src="ext/display-legendre.js" type="text/javascript"></script>
   </head>
   <body>
     <h1>Legendre symbol evaluator</h1>
@@ -53,13 +53,13 @@
         <dt id="law-quadratic-reciprocity-1">Law of quadratic reciprocity (1)</dt>
         <dd>
           If <i>p</i> &#x2262; 1 (mod 4) or <i>q</i> &#x2262; 1 (mod 4)
-		  then (<i>p</i> | <i>q</i>) = (<i>q</i> | <i>p</i>)
+          then (<i>p</i> | <i>q</i>) = (<i>q</i> | <i>p</i>)
         </dd>
 
         <dt id="law-quadratic-reciprocity-2">Law of quadratic reciprocity (2)</dt>
         <dd>
           If <i>p</i> &#x2262; <i>q</i> &#x2262; 3 (mod 4)
-		  then (<i>p</i> | <i>q</i>) = -(<i>q</i> | <i>p</i>)
+          then (<i>p</i> | <i>q</i>) = -(<i>q</i> | <i>p</i>)
         </dd>
       </dl>
     </div>
