Add #title to h1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="ext/display-legendre.js" type="text/javascript"></script>
   </head>
   <body>
-    <h1>Legendre symbol evaluator</h1>
+    <h1 id="title">Legendre symbol evaluator</h1>
     <div id="instructions">
       <h2>Properties of the
         <a href="http://mathworld.wolfram.com/LegendreSymbol.html">
