--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
       </dl>
     </div>
     <div id="content">
-      <h2>Evaluate</h2>
+      <h2>Results</h2>
       <form action="javascript:void(0);" id="form">
         <p>
           (<input id="x" size="1"> | <input id="y" size="1">)
-          <input type="submit" value="Evaluate">
+          <input type="submit" value="Evaluate Legendre symbol">
         </p>
       </form>
       <div id="results"></div>
