Added default values to web page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
       <h2>Results</h2>
       <form action="javascript:void(0);" id="form">
         <p>
-          (<input id="x" size="1"> | <input id="y" size="1">)
+          (<input id="x" size="1" value="2310"> |
+          <input id="y" size="1" value="13381">)
           <input type="submit" value="Evaluate Legendre symbol">
         </p>
       </form>
