--- a/index.html
+++ b/index.html
@@ -64,15 +64,18 @@
       </dl>
     </div>
     <div id="content">
-      <h2>Results</h2>
+      <h2>Evaluate</h2>
       <form action="javascript:void(0);" id="form">
         <p>
-          (<input id="x" size="1" value="2310"> |
-          <input id="y" size="1" value="13381">)
+          (<input id="x" type="number" value="2310"> |
+          <input id="y" type="number" value="13381">)
           <input type="submit" value="Evaluate Legendre symbol">
         </p>
       </form>
       <div id="results"></div>
+    </div>
+    <div id="byline">
+      <p>By <a href='http://sean.mcgivern.me.uk'>Sean McGivern</a></p>
     </div>
   </body>
 </html>
