Added about page and README

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1 id="title">Legendre symbol evaluator</h1>
+    <p id="about-link">(<a href="about.html">about</a>)</p>
     <div id="instructions">
       <h2>Properties of the
         <a href="http://mathworld.wolfram.com/LegendreSymbol.html">
