Corrected GitHub reference on about page

--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
           M381 &#8211; Number theory and mathematical logic</a>
         and wrote this web page / tool to help show the steps involved
         in evaluating a Legendre symbol. To see how it was made,
-        either view source or check out the repository on Github at
-        <a href="https://github.com/smcgivern/graph-database">
+        either view source or check out the repository on GitHub at
+        <a href="https://github.com/smcgivern/legendre-symbol-evaluator">
           smcgivern/legendre-symbol-evaluator</a>.
       </p>
     </div>
