Renamed submit button

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
       </dl>
     </div>
     <div id="content">
-      <h2>Evaluate</h2>
+      <h2>Evaluator</h2>
       <form action="javascript:void(0);" id="form">
         <p>
           (<input id="x" type="number" value="2310"> |
           <input id="y" type="number" value="13381">)
-          <input type="submit" value="Evaluate Legendre symbol">
+          <input type="submit" value="Evaluate">
         </p>
       </form>
       <div id="results"></div>
