--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="ext/display-legendre.js" type="text/javascript"></script>
   </head>
   <body>
+    <noscript>
+      This page requires JavaScript to be enabled in order to work.
+    </noscript>
     <h1 id="title">Legendre symbol evaluator</h1>
     <p id="about-link">(<a href="about.html">about</a>)</p>
     <div id="instructions">
