Remove application cache
The last commit, 10 years ago (!), fixed this. It's now deprecated and
so I can remove it.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="legendre-symbol-evaluator.appcache">
+<html>
   <head>
     <title>Legendre symbol evaluator</title>
     <link href="ext/app-icon.png" rel="apple-touch-icon">
